data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3170.wast
;; 9. **Test Description**: Run a function that involves a call inside a block, followed by a `br_if` instruction that depends on the function call results. Verify label target resolution.    - **Constraint**: Ensures correct `br_if` resolution and control flow based on called function results.

(assert_invalid
  (module
    (type (func (result i32)))
    (func (result i32)
      (block (result i32)
        (call 0)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)